--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15",
+    "link-preview-generator": "^1.1.0",
+    "nodemon": "^1.3.3",
     "telegraf": "^4.5.2"
   }
 }
